Fix a bug when mouse move out of the box

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    min-height: 100%;
+}
+
 .title {
     text-align: center;
     font-size: 50px;
